--- a/style/style.css
+++ b/style/style.css
@@ -15,7 +15,8 @@ p
   line-height: 1.7em;}
 
 img
-{ border: 0;}
+{ border: 0;
+  border-radius: 50%;}
 
 h1, h2, h3, h4, h5, h6 
 { color: #362C20;
@@ -215,7 +216,7 @@ ul#menu li a:hover
 
 #content
 { text-align: left;
-  width: 620px;
+  width: 850px;
   padding: 0 0 0 5px;
   float: left;}
   
